responsive home sidebar - cards - justify content - stretch fix

--- a/src/Components/Cards/ProductCard/ProductCard.css
+++ b/src/Components/Cards/ProductCard/ProductCard.css
@@ -44,10 +44,22 @@ h6 {
     cursor: pointer;
     border: 1px rgb(18, 49, 58) solid;
     /* border-color: rgb(0, 0, 0); */
-    height: 100%;
+    /* height: 120%; */
+    justify-content: stretch;
     margin-bottom: 5%;
     /* margin-left: 35px; */
     /* flex-wrap: nowrap; */
+    box-sizing: content-box;
+    /* width: 100%; */
+    padding: 1rem;
+
+}
+
+.fatherCard {
+    width: '35rem';
+    height: '15rem';
+
+
 }
 
 
@@ -60,7 +72,8 @@ h6 {
     color: rgb(255, 187, 0);
     text-shadow: 0px 4px 23px rgba(255, 255, 255, 0.911);
     /* border-radius: 50%; */
-
+    box-sizing: content-box;
+    width: 100%;
 
 }
 
@@ -125,6 +138,8 @@ h6 {
     display: flex;
     /* flex-direction: column; */
     flex-wrap: wrap;
+    /* box-sizing: content-box; */
+    width: 100%;
 }
 
 .conteinerimg {
@@ -134,10 +149,27 @@ h6 {
     width: 18rem;
     text-decoration: none;
     /* color: #ffbb007a */
+    padding: 1rem;
 }
 
 .starshadow {
     filter: drop-shadow(0 2px 5px rgb(0, 0, 0));
+}
+
+
+.conteinerimg {
+    background-size: 20rem auto;
+    background-repeat: cover;
+    justify-content: stretch;
+    height: auto;
+    width: 18rem;
+    text-decoration: none;
+    /* color: #ffbb007a */
+}
+
+.starshadow {
+    filter: drop-shadow(0 2px 5px rgb(0, 0, 0));
+
 }
 
 @media screen and (max-width:375px) {
@@ -156,26 +188,17 @@ h6 {
         /* max-height: 370px; */
         /* align-items: center; */
         justify-content: stretch;
-        max-height: 370px;
+        height: 30rem;
+        width: 10rem;
         /* height: 30%; */
         flex-wrap: column;
         margin-top: 0px;
         align-items: center;
     }
-}
 
-
-.conteinerimg {
-    background-size: 20rem auto;
-    background-repeat: cover;
-    justify-content: stretch;
-    height: auto;
-    width: 18rem;
-    text-decoration: none;
-    /* color: #ffbb007a */
-}
-
-.starshadow {
-    filter: drop-shadow(0 2px 5px rgb(0, 0, 0));
+    .headerContainer {
+        height: 30rem;
+        width: 1rem;
+    }
 
 }
